# hfsplus-forensic

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-single-crate-reader-and-analyzer.md  0002-forensicnomicon-knowledge-and-report.md  0003-decmpfs-codec-reuse-length-tolerant-lzvn.md  0004-transparent-decompression-in-read-file.md  0005-forbid-unsafe-slice-reader.md  0006-panic-free-fuzzed-parsing.md  0007-optional-vfs-feature-adapter.md  0008-low-msrv-floor-vs-pinned-toolchain.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: audit.rs  decmpfs.rs  list_dir.rs  read_file.rs  stat.rs  volume.rs  walk.rs
src/: decmpfs.rs  findings.rs  lib.rs  vfs.rs
supply-chain/: config.toml
tests/: catalog.rs  decmpfs_integration.rs  findings.rs  vfs_hfs.rs
tests/data/: README.md
tests/data/decmpfs/: lzvn.expected  lzvn.rsrc  real_lzfse_inline.payload  real_lzfse_rsrc.rsrc  real_zlib_inline.expected  real_zlib_inline.payload  real_zlib_rsrc.rsrc  tahoe_type8.rsrc  tahoe_type9.decmpfs  zlib.expected  zlib_inline.expected  zlib_type3_inline.payload  zlib_type3_stored.payload  zlib_type4.rsrc
