[package]
name = "hfsplus-forensic"
version = "0.2.2"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Forensic-grade, from-scratch Apple HFS+/HFSX reader — volume header geometry, catalog B-tree directory listing, and data-fork file extraction over a byte buffer"
repository = "https://github.com/SecurityRonin/hfsplus-forensic"
homepage = "https://github.com/SecurityRonin/hfsplus-forensic"
documentation = "https://docs.rs/hfsplus-forensic"
readme = "README.md"
keywords = ["forensics", "hfs", "hfsplus", "filesystem", "dfir"]
categories = ["parser-implementations", "filesystem"]

[dependencies]
# decmpfs transparent-compression codecs (reuse, not reinvent):
#   zlib/DEFLATE (types 3/4) and LZVN/LZFSE (types 7/8/11/12).
# Both are pure-Rust, keeping `unsafe_code = "forbid"` intact.
flate2 = "1"
# LZFSE (types 11/12). LZVN (types 7/8) goes through our `lzvn` crate instead:
# its decode is length-tolerant, which lzfse_rust's strict stream path is not —
# real macOS decmpfs LZVN blocks carry trailing bytes after end-of-stream.
lzfse_rust = "0.2"
# Length-tolerant Apple LZVN decoder (reads real decmpfs blocks with trailing
# bytes after end-of-stream, which lzfse_rust rejects). Pure-Rust, no_std.
lzvn = { version = "0.1", package = "lzvn-core" }
# decmpfs format knowledge (magic, type→algorithm/storage map, chunk size).
forensicnomicon = "1"
# Universal read-only VFS contract. Optional: the `FileSystem` adapter (src/vfs.rs)
# lives behind the `vfs` feature so a bare reader does not pull it in. forensic-vfs
# is safe Rust, so `unsafe_code = "forbid"` stays intact.
forensic-vfs = { version = "0.3", optional = true }

[features]
# Enable `impl FileSystem for HfsFs` (the forensic-vfs adapter).
vfs = ["dep:forensic-vfs"]

[lints.rust]
unsafe_code = "forbid"
